[gd_scene load_steps=6 format=3 uid="uid://diy8nccpcno8u"]

[ext_resource type="Script" path="res://inventory/Inventory.gd" id="1_dnguv"]
[ext_resource type="Texture2D" uid="uid://jqxphy5jw6ah" path="res://inventory/Copilot_20250629_190412.png" id="2_jr7i0"]
[ext_resource type="Script" path="res://inventory/CurrencyDisplay.gd" id="3_8fnrt"]
[ext_resource type="Texture2D" uid="uid://8j3h116k5w65" path="res://inventory/BCO.4719e544-a259-4f7d-9797-46f59b382282.png" id="3_a2rii"]
[ext_resource type="Texture2D" uid="uid://bjkskwaleh7ro" path="res://inventory/KITTY BANDAID.png" id="4_avimy"]

[node name="Inventory" type="Control"]
process_mode = 3
visibility_layer = 4
z_index = 2
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_dnguv")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.870588)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.999999
offset_top = -195.0
offset_right = 1023.0
offset_bottom = 829.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.25589, 0.885521)
mouse_filter = 2
texture = ExtResource("2_jr7i0")

[node name="TextureRect" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_a2rii")
expand_mode = 2

[node name="TooltipPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 73.0
offset_top = 67.0
offset_right = 73.0
offset_bottom = 67.0
scale = Vector2(0.75, 0.75)
mouse_filter = 2

[node name="GridParent" type="Node2D" parent="GridContainer"]

[node name="PlacedPartsContainer" type="Node2D" parent="GridContainer"]

[node name="PaletteContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 873.0
offset_top = 112.0
offset_right = 873.0
offset_bottom = 112.0
mouse_filter = 2
columns = 2

[node name="CurrencyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 584.0
offset_top = 73.0
offset_right = 624.0
offset_bottom = 96.0
script = ExtResource("3_8fnrt")

[node name="KittyBandaid" type="Sprite2D" parent="CurrencyLabel"]
position = Vector2(-17, 0)
rotation = 0.598648
texture = ExtResource("4_avimy")
